Add new screen Ro bed

--- a/WpfApplication17/WpfApplication17.csproj
+++ b/WpfApplication17/WpfApplication17.csproj
@@ -69,8 +69,20 @@
     <Compile Include="MainMenuUC.xaml.cs">
       <DependentUpon>MainMenuUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PageBedNew.xaml.cs">
+      <DependentUpon>PageBedNew.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PageDashBoard.xaml.cs">
       <DependentUpon>PageDashBoard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageDummy.xaml.cs">
+      <DependentUpon>PageDummy.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageRoNew.xaml.cs">
+      <DependentUpon>PageRoNew.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageServiceNew.xaml.cs">
+      <DependentUpon>PageServiceNew.xaml</DependentUpon>
     </Compile>
     <Compile Include="PageSettingRoType.xaml.cs">
       <DependentUpon>PageSettingRoType.xaml</DependentUpon>
@@ -103,11 +115,27 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PageBedNew.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PageDashBoard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PageDummy.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PageRegister.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageRoNew.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageServiceNew.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
