--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Days.cs" />
-    <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeLayer.cs" />
     <Compile Include="EmployeeTbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
