--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="EmployeeTypeTbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Metadata\EmployeeTypeTblMetadata.cs" />
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -75,7 +76,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RTypeTbl.cs">
+    <Compile Include="RoomTypeTbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="SettingLayer.cs" />
